# nonebot-plugin-text-ban

./: README.md  pyproject.toml
src/nonebot_plugin_text_ban/: __init__.py  config.py
